# XIAOJUN

./: Git工作流规范.md  README.md
2048游戏/: README.md  index.html
2048游戏/docs/: 开发日志.md  项目计划.md  风险评估报告.md
2048游戏/docs/design/: UI设计文档.md  技术选型报告.md  架构设计文档.md
2048游戏/docs/prd/: 需求文档.md
2048游戏/docs/project/: 文件管理规范.md
2048游戏/reports/: 修复报告.md  完整代码测试.md  测试报告-逻辑错误.md  诊断指南.md
Excel公式助手/: .eslintrc.js  .gitignore  CHANGELOG.md  PROGRESS.md  README.md  check-env.ps1  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
Excel公式助手/docs/design/: UI设计文档.md  代码规范.md  技术选型报告.md  架构设计文档.md
Excel公式助手/docs/development/: 2026-03-29.md  V2.0开发计划.md  test-entrance.html  test-sales.xlsx  兼容性测试报告-2026-03-29.md  回归测试报告-2026-03-29.md  安全性测试报告-2026-03-29.md  开发环境搭建指南.md  性能测试报告-2026-03-29.md  测试报告-2026-03-29.md  环境检查清单.md  环境检查结果.md  边界条件测试报告-2026-03-29.md
Excel公式助手/docs/prd/: 需求文档.md  需求确认记录.md
Excel公式助手/docs/project/: 项目计划.md  风险评估报告.md
Excel公式助手/src/: App.vue  main.ts
Excel公式助手/src-tauri/: Cargo.toml  tauri.conf.json
Excel公式助手/src-tauri/src/: main.rs
Excel公式助手/src/components/: ExampleDisplay.vue  TableGrid.vue
Excel公式助手/src/router/: index.ts
Excel公式助手/src/store/: index.ts
Excel公式助手/src/types/: index.ts
Excel公式助手/src/utils/: data.ts  db.ts  excelParser.ts  formulaCombinations.ts  formulaEngine.ts  formulaHelper.ts  realCases.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: RoleSelector.vue
src/config/: taskProtocol.ts
src/stores/: chat.ts  role.ts
src/utils/: gateway.ts
(+27 files in other folders)
